# CISC-830-Cyberinfrastructure-Foundations

./: README.md
Assignments/Assignment 1/: compile.sh  input_generator.cc  run.sh  sample1.in  sample1.out  sample10.in  sample2.in  sample2.out  sample3.in  sample4.in  sample6.in  sample7.in  sample8.in  sample9.in  sort  sort.cc  test.sh
Assignments/Assignment 2/: compile.sh  hop_ann.cc  hop_annn.cc  input_gen.cc  run.sh  sample1.in  sample2.in  sample3.out
Assignments/Assignment 3/: CMakeLists.txt  compile.sh  hw3tensor.cc  sample1.py  sample2.py  sample3.py  tensor.h
Assignments/Assignment 4/: References.txt  compile.sh  discretelog.cc  run.sh  valid.cc
Assignments/Assignment 5/: compile.sh  input_generator  input_generator.cc  pagerank  pagerank.cc  run.sh  sample1.in  sample1.out  sample10.out  sample2.in  sample2.out  sample3.out  sample4.out  sample5.out  sample6.out  sample7.out  sample8.out  sample9.out  test.sh
Presentation/: RAPIDS.pptx
Project/: .gitignore  CyberInfra project.pptx  Readme.md  demo.sh  example.sh  run.sh
Project/baseline/: CD_baseline  CD_baseline.cpp  CMakeLists.txt  Makefile  run.sh
Project/baseline_GPU/: CD_baseline_GPU  CD_baseline_GPU.cu  CMakeLists.txt  Makefile  run.sh
Project/baseline_omp/: CD_baseline_omp  CD_baseline_omp.cpp  CMakeLists.txt  Makefile  run.sh
Project/data_generator/: CMakeLists.txt  Makefile  data_generator  data_generator.cpp  run.sh
Project/kd/: CD_kd  CD_kd.cpp  CMakeLists.txt  Makefile  run.sh
Project/kd_omp/: CD_kd_omp  CD_kd_omp.cpp  CMakeLists.txt  Makefile  run.sh
Project/results/: plot_results.py  results.txt
